--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
             </ul>
         </div>
     </div>
+
+    <div class="content-container">
+        <div class="content">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, consequuntur. Suscipit consequuntur laudantium soluta eos illum doloremque velit nisi. Aliquid labore modi laudantium beatae iusto sunt aspernatur, earum ducimus nulla!
+        </div>
+    </div>
+
+    <div class="footer">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, tempora quidem! Maiores distinctio ratione maxime, necessitatibus sequi iusto rerum omnis nemo quis nisi iure cumque laborum qui minus veniam mollitia!
+    </div>
 </body>
 </html>
