Added phone number placeholder

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
                 <li><a href="/">Contact Us</a></li>
             </ul>
         </div>
+
+        <p>Call us: 48859939482858952924</p>
     </div>
 
     <div class="content-container">
         <div class="content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, consequuntur. Suscipit consequuntur laudantium soluta eos illum doloremque velit nisi. Aliquid labore modi laudantium beatae iusto sunt aspernatur, earum ducimus nulla!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci ratione alias aliquid accusamus, illum deserunt corrupti totam quibusdam saepe optio molestiae expedita dolorum quos. Quisquam assumenda recusandae tempore hic laborum.
         </div>
     </div>
 
