Added about-me section and multiple icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="script.js" defer></script>
     <title>Secure Solution</title>
     <link rel="icon" href="images/favicon.png">
+    <script src="https://kit.fontawesome.com/ad421c78bd.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="nav-bar">
@@ -15,23 +17,48 @@
         <div class="nav-links">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/">About Us</a></li>
+                <li><a href="/">Our Services</a></li>
                 <li><a href="/">Our Team</a></li>
                 <li><a href="/">Contact Us</a></li>
+                <img src="images/facebook.svg" alt="" style="width: 2rem; margin: 0">
             </ul>
         </div>
-
-        <p>Call us: 48859939482858952924</p>
     </div>
 
-    <div class="content-container">
-        <div class="content">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci ratione alias aliquid accusamus, illum deserunt corrupti totam quibusdam saepe optio molestiae expedita dolorum quos. Quisquam assumenda recusandae tempore hic laborum.
+    <div class="slideshow-container">
+        <div class="slides">
+            <img src="images/slide-1.avif" alt="">
+            <div class="slide-info">   
+                <p class="slide-header">Lorem ipsum dolor</p>
+                <p class="slide-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="slide-button">Call us: 48859939482858952924</div>
+            </div>
+        </div>
+        <div class="slides">
+            <img src="images/slide-2.avif" alt="">
+            <div class="slide-info">   
+                <p class="slide-header">Lorem ipsum dolor</p>
+                <p class="slide-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="slide-button">Call us: 48859939482858952924</div>
+            </div>
+        </div>
+        <div class="slides">
+            <img src="images/slide-3.avif" alt="">
+            <div class="slide-info">   
+                <p class="slide-header">Lorem ipsum dolor</p>
+                <p class="slide-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                <div class="slide-button">Call us: 48859939482858952924</div>
+            </div>
         </div>
     </div>
 
-    <div class="footer">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, tempora quidem! Maiores distinctio ratione maxime, necessitatibus sequi iusto rerum omnis nemo quis nisi iure cumque laborum qui minus veniam mollitia!
+    <div class="content">
+        <p class="content-header">About Us</p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore earum voluptatem recusandae. At dignissimos voluptate distinctio, ad minima reiciendis, facere quae praesentium animi maiores nostrum debitis quis saepe, consequuntur rerum.
     </div>
+
+    <!-- <div class="footer">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, tempora quidem! Maiores distinctio ratione maxime, necessitatibus sequi iusto rerum omnis nemo quis nisi iure cumque laborum qui minus veniam mollitia!
+    </div> -->
 </body>
 </html>
