Added about me and more responsiveness

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="nav-links">
             <ul>
                 <li><a href="/">Home</a></li>
+                <li><a href="#our-team">Our Team</a></li>
                 <li><a href="/">Our Services</a></li>
-                <li><a href="/">Our Team</a></li>
                 <li><a href="/">Contact Us</a></li>
                 <img src="images/facebook.svg" alt="" style="width: 2rem; margin: 0">
             </ul>
@@ -53,8 +53,33 @@
     </div>
 
     <div class="content">
-        <p class="content-header">About Us</p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore earum voluptatem recusandae. At dignissimos voluptate distinctio, ad minima reiciendis, facere quae praesentium animi maiores nostrum debitis quis saepe, consequuntur rerum.
+        <p class="content-header" id="our-team">Who We Are</p>
+        <p class="content-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ipsa quidem. Voluptas, voluptatibus veritatis esse sapiente eveniet fugiat. Tenetur, architecto possimus. Delectus fugiat cumque quae nobis dolor pariatur, odit veritatis!</p>
+        <div class="our-team">
+            <div class="member-1">
+                <img src="images/person-1.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="member-2">
+                <img src="images/person-2.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="member-3">
+                <img src="images/person-3.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="our-services">
+        <div class="first-services">
+            <p>Residential and Commercial Emergency Lockouts</p>
+            <p>Residential Lock Changes</p>
+        </div>
+        <div class="second-services">
+            <p>CCTV Install</p>
+            <p>Physical Security Consultation</p>
+        </div>
     </div>
 
     <!-- <div class="footer">
