Added our services tab

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="#our-team">Our Team</a></li>
-                <li><a href="/">Our Services</a></li>
+                <li><a href="#our-services">Our Services</a></li>
                 <li><a href="/">Contact Us</a></li>
                 <img src="images/facebook.svg" alt="" style="width: 2rem; margin: 0">
             </ul>
@@ -71,14 +71,30 @@
         </div>
     </div>
 
-    <div class="our-services">
-        <div class="first-services">
-            <p>Residential and Commercial Emergency Lockouts</p>
-            <p>Residential Lock Changes</p>
-        </div>
-        <div class="second-services">
-            <p>CCTV Install</p>
-            <p>Physical Security Consultation</p>
+    <div class="service-container">
+        <p class="services-header">Our Services</p>
+        <p class="services-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt cupiditate doloremque, autem recusandae corporis fugiat sunt debitis dolores placeat ipsa. Dolores excepturi veritatis obcaecati natus eum, error laudantium rem aliquam.</p>
+        <div class="our-services" id="our-services">
+            <div class="first-services">
+                <div class="first-service">
+                    <img src="images/service-1.avif" alt="">
+                    <p>Residential and Commercial Emergency Lockouts</p>
+                </div>
+                <div class="second-service">
+                    <img src="images/service-2.avif" alt="">
+                    <p>Residential Lock Changes</p>
+                </div>
+            </div>
+            <div class="second-services">
+                <div class="third-service">
+                    <img src="images/service-3.avif" alt="">
+                    <p>CCTV Install</p>
+                </div>
+                <div class="fourth-service">
+                    <img src="images/service-4.avif" alt="">
+                    <p>Physical Security Consultation</p>
+                </div>
+            </div>
         </div>
     </div>
 
