Started addition of contact us section

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
         </div>
     </div>
 
+    <div class="contact-us">
+        <p>Contact Us</p>
+    </div>
+
     <!-- <div class="footer">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique, tempora quidem! Maiores distinctio ratione maxime, necessitatibus sequi iusto rerum omnis nemo quis nisi iure cumque laborum qui minus veniam mollitia!
     </div> -->
