--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
 
     <div class="contact-us">
         <p>Contact Us</p>
+        <div class="contact-form">
+            <form action="contact.php" method="post">
+                Email Address:
+                <input type="text" id="email" name="user_email">
+                Subject:
+                <input type="text" id="subject" name="user_subject">
+                Message:
+                <textarea name="message" id="user_message" cols="30" rows="10"></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
     </div>
 
     <!-- <div class="footer">
