Fixed contact form issue #1

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     <div class="contact-us">
         <p>Contact Us</p>
         <div class="contact-form">
-            <form action="contact.php" method="post">
+            <form action="contact.php" method="POST">
                 Email Address:
                 <input type="text" id="email" name="user_email">
                 Subject:
                 <input type="text" id="subject" name="user_subject">
                 Message:
-                <textarea name="message" id="user_message" cols="30" rows="10"></textarea>
+                <textarea name="user_message" id="user_message" cols="30" rows="10"></textarea>
                 <button type="submit">Submit</button>
             </form>
         </div>
